--- a/public/style.css
+++ b/public/style.css
@@ -188,7 +188,7 @@ nav a:hover::after {
   justify-content: center;
   text-align: center;
   position: relative;
-  background-image: url("images/26.jpg");
+  background-image: url("images/26.webm");
   background-size: cover;
   background-position: center;
   color: #fff;
