--- a/public/style.css
+++ b/public/style.css
@@ -188,10 +188,25 @@ nav a:hover::after {
   justify-content: center;
   text-align: center;
   position: relative;
-  background-image: url("images/26.webm");
   background-size: cover;
   background-position: center;
   color: #fff;
+}
+.hero-video-wrapper {
+  position: absolute; /* Lo posiciona relativo al .hero */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Oculta cualquier desbordamiento del video */
+  z-index: 0; /* Lo pone detrás de todo */
+}
+
+.hero-video-wrapper video {
+  width: 100%;
+  height: 100%;
+  /* 'cover' asegura que el video llene todo el espacio, recortando los bordes si es necesario */
+  object-fit: cover;
 }
 .hero-overlay {
   position: absolute;
