--- a/public/style.css
+++ b/public/style.css
@@ -474,7 +474,7 @@ nav a:hover::after {
   font-weight: 550;
   letter-spacing: 1.5px;
   display: inline-flex; /* Para alinear el texto y el icono */
-  align-items: right;
+  align-items: center;
   gap: 10px; /* Espacio entre el texto y el icono */
   transition: all 0.3s ease;
   text-align: center;
